[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawlink-router"
version = "1.0.0"
description = "ClawLink Router - Multi-agent middleware service with teaching loops, group chat, and message queuing."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "paramiko>=3.4.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx",
]
